--- a/work/css/vote.css
+++ b/work/css/vote.css
@@ -271,8 +271,6 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 300px;
-    text-align: center;
     background-color: #fff; 
 
     
@@ -284,17 +282,19 @@ header.dark nav ul li a:hover{
     font-size: 30px;
     font-weight: bold;
     padding-top: 3%;
-   
+    text-align: center;
 }
 
 .overview  p{
     display: inline-block;
-    width:700px;
     color: #838181;
     font-family: "raleway-regular";
     font-size: 16px;
-    line-height: 32px; 
+    line-height: 28px; 
     letter-spacing: .5px;
+    width: 60%;
+    margin-left: 20%;
+    text-align: center;
 }
 
 
@@ -316,6 +316,7 @@ header.dark nav ul li a:hover{
     float: left;
     margin-right:2%;
     text-align: center;
+    margin-top: 2%;
 }
 
 .intro ul li:first-child{
@@ -774,7 +775,6 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 380px;
     text-align: center;
     background-color: #fff; 
 
@@ -792,12 +792,13 @@ header.dark nav ul li a:hover{
 
 .overview  p{
     display: inline-block;
-    width:300px;
     color: #838181;
     font-family: "raleway-regular";
     font-size: 14px;
-    line-height: 32px; 
+    line-height: 28px; 
     letter-spacing: .5px;
+    width: 80%;
+    margin-left: 10%;
 }
 
 
