--- a/work/css/vote.css
+++ b/work/css/vote.css
@@ -725,7 +725,7 @@ header{
 
 header .logo{
     float: left;
-    margin-left: -15px;
+    margin-right: 100%;
     margin-bottom: 5%;
     width:25%;
     
