--- a/work/css/Collection.css
+++ b/work/css/Collection.css
@@ -37,7 +37,7 @@
 
 }
 
-@media screen and (min-width:1440px){
+@media screen and (min-width:650px){
 
 
 /*  General CSS*/
@@ -274,7 +274,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1100px;
+    height: 2000px;
     text-align: center;
     background-color: #f2f3f7; 
 
@@ -332,7 +332,6 @@ footer .rights p a{
 
 
 }
-
 
 
 
@@ -577,7 +576,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 550px;
+    height: 1150px;
     text-align: center;
     background-color: #f2f3f7; 
 
@@ -605,6 +604,9 @@ header.dark nav ul li a:hover{
 
 }
 
+#UT{
+    width: 40%;
+}
 
 
 /*    footer    */
