--- a/work/css/rackspace.css
+++ b/work/css/rackspace.css
@@ -37,8 +37,8 @@
 
 }
 
-
 @media screen and (min-width:651px){
+
 
 /*  General CSS*/
 body{
@@ -133,7 +133,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.light{
-    background: url('../img/rackspace.jpg') no-repeat;   
+    background: url('../img/or.jpg') no-repeat;   
      
     background-size: cover;
     -webkit-background-size: cover;
@@ -142,7 +142,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.dark{
-    background: url('../img/rackspace.jpg') no-repeat;
+    background: url('../img/collection-bg.jpg') no-repeat;
     
     background-size: cover;
     -webkit-background-size: cover;
@@ -271,98 +271,35 @@ header.dark nav ul li a:hover{
 }
 
 
-.bg {
+.p1 {
 
     display: block;
     width: 100%;
-  
-    
+    height: 2000px;
+    text-align: center;
+    background-color: #f2f3f7; 
 
     
 }
 
-
-
-.bg h2 {
+.p1 h2{
 
     color: #616161;
     font-family: "raleway-bold";
     font-size: 30px;
     font-weight: bold;
     padding-top: 3%;
-    text-align: center;
    
 }
 
-.subtitle p {
+#error{
 
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 16px;
-    line-height: 28px; 
-    letter-spacing: .5px;
-    width: 60%;
-    text-align: center;
-    margin-left: 20%;
+    width: 40%;
 
 }
+#hiw {
 
-
-.bg ul li{
-    list-style: none;
-    display: block;
-    width: 21%;
-    float: left;
-    margin-right:2%;
-    text-align: center;
-}
-
-.bg ul li:first-child{
-    margin-left: 15%;
-}
-
-
-.bg ul li h2{
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 22px;
-    font-weight: bold;
-    margin-top: 3%;
-
-}
-
-.bg ul li p{
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 16px;
-    line-height: 28px; 
-    margin-top: 10%;
-    letter-spacing: .5px;
-
-}
-
-.bg a {
-
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 35px;
-    font-weight: bold;
-    text-decoration: underline;
-    
-  
-}
-
-.bg a p {
-
-     text-align: center;
-}
-
-.bg hr {
-
-
-    width: 60%;
-    margin-left: 20%;
-    margin-top: 5%;
+    width: 40%;
 
 }
 
@@ -393,10 +330,9 @@ footer .rights p a{
     text-decoration: none;
 }
 
+
+
 }
-
-
-
 
 
 
@@ -507,7 +443,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.dark{
-    background: url('../img/blushup.jpg') no-repeat;
+    background: url('../img/collection-bg.jpg') no-repeat;
     
     background-size: cover;
     -webkit-background-size: cover;
@@ -637,101 +573,41 @@ header.dark nav ul li a:hover{
 }
 
 
-.bg {
+.p1 {
 
     display: block;
     width: 100%;
-        
+    height: 1150px;
+    text-align: center;
+    background-color: #f2f3f7; 
 
     
 }
 
-
-
-.bg h2 {
+.p1 h2{
 
     color: #616161;
     font-family: "raleway-bold";
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     padding-top: 3%;
-    text-align: center;
    
 }
 
-.subtitle p {
+#error{
 
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 16px;
-    line-height: 28px; 
-    letter-spacing: .5px;
-    width: 80%;
-    text-align: center;
-    margin-left: 10%;
+    width: 70%;
+
+}
+#hiw {
+
+    width: 70%;
 
 }
 
-
-.bg ul li{
-    list-style: none;
-    display: block;
-    width: 21%;
-    float: left;
-    margin-right:10%;
-    text-align: center;
+#UT{
+    width: 40%;
 }
-
-.bg ul li:first-child{
-    margin-left: 5%;
-}
-
-
-.bg ul li h2{
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 22px;
-    font-weight: bold;
-    margin-top: 3%;
-
-}
-
-.bg ul li p{
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 14px;
-    line-height: 28px; 
-    margin-top: 10%;
-    letter-spacing: .5px;
-
-}
-
-.bg a {
-
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 28px;
-    font-weight: bold;
-    text-decoration: underline;
-    
-  
-}
-
-.bg a p {
-
-     text-align: center;
-}
-
-.bg hr {
-
-
-    width: 60%;
-    margin-left: 20%;
-    margin-top: 5%;
-
-}
-
-
 
 
 /*    footer    */
@@ -764,4 +640,3 @@ footer .rights p a{
 
 
 }
-*/
