--- a/work/css/Collection.css
+++ b/work/css/Collection.css
@@ -133,7 +133,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.light{
-    background: url('../img/or.jpg') no-repeat;   
+    background: url('../img/collection-bg.jpg') no-repeat;   
      
     background-size: cover;
     -webkit-background-size: cover;
@@ -142,7 +142,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.dark{
-    background: url('../img/or.jpg') no-repeat;
+    background: url('../img/collection-bg.jpg') no-repeat;
     
     background-size: cover;
     -webkit-background-size: cover;
