--- a/work/css/rackspace.css
+++ b/work/css/rackspace.css
@@ -271,37 +271,35 @@ header.dark nav ul li a:hover{
 }
 
 
-.p1 {
 
-    display: block;
-    width: 100%;
-    height: 2000px;
-    text-align: center;
-    background-color: #f2f3f7; 
-
-    
-}
-
-.p1 h2{
+.overview h2{
 
     color: #616161;
     font-family: "raleway-bold";
     font-size: 30px;
     font-weight: bold;
     padding-top: 3%;
+    text-align: center;
+
    
 }
 
-#error{
-
-    width: 40%;
+.overview  p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    width: 60%;
+    margin-left: 20%;
+    text-align: center;
 
 }
-#hiw {
 
-    width: 40%;
 
-}
+
+
+
 
 
 /*    footer    */
