--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -148,7 +148,7 @@ margin-left: 15%;
 }
 
 .billboard.light{
-    background: url('../img/billboard.jpg') no-repeat;   
+    background: url('../img/farm.jpg') no-repeat;   
      
     background-size: cover;
     -webkit-background-size: cover;
@@ -157,7 +157,7 @@ margin-left: 15%;
 }
 
 .billboard.dark{
-    background: url('../img/farm.jpg') no-repeat;
+    background: url('../img/') no-repeat;
     
     background-size: cover;
     -webkit-background-size: cover;
@@ -1156,7 +1156,7 @@ margin-left: 15%;
 }
 
 .billboard.light{
-    background: url('../img/billboard.jpg') no-repeat;   
+    background: url('../img/farm.jpg') no-repeat;   
      
     background-size: cover;
     -webkit-background-size: cover;
@@ -1165,7 +1165,7 @@ margin-left: 15%;
 }
 
 .billboard.dark{
-    background: url('../img/farm.jpg') no-repeat;
+    background: url('../img/') no-repeat;
     
     background-size: cover;
     -webkit-background-size: cover;
