--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.8;
@@ -23,7 +23,7 @@ body {
 
 .aboutme p {
 
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.8;
@@ -35,7 +35,7 @@ body {
 
 .aboutme a{
 
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.8;
@@ -105,7 +105,7 @@ figure {
     margin: 20px auto 0px auto;
     color: #b3b3b3;
     font-style: italic;
-    font-family: "Quicksand", Arial, sans-serif; }
+    font-family: "Baloo 2", Arial, sans-serif; }
     @media screen and (max-width: 480px) {
       figure figcaption {
         width: 100%; } }
@@ -199,7 +199,7 @@ figure {
           text-decoration: none;
           position: relative;
           padding: 10px 0;
-          font-family: "Quicksand", Arial, sans-serif;
+          font-family: "Baloo 2", Arial, sans-serif;
           -webkit-transition: 0.3s;
           -o-transition: 0.3s;
           transition: 0.3s; }
@@ -363,7 +363,7 @@ figure {
           line-height: 1.5;
           margin-bottom: 30px;
           font-weight: 300;
-          font-family: "Quicksand", Arial, sans-serif; }
+          font-family: "Baloo 2", Arial, sans-serif; }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 a {
             color: rgba(44, 152, 240, 0.8);
             border-bottom: 1px solid rgba(44, 152, 240, 0.7); }
@@ -515,7 +515,7 @@ body.offcanvas {
   font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   background-color: #2c98f0;
   color: #fff;
   position: relative;
@@ -654,7 +654,7 @@ body.offcanvas {
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
   font-size: 20px;
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   font-weight: 500; }
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 a {
@@ -684,7 +684,7 @@ body.offcanvas {
       font-size: 30px;
       color: #2c98f0; }
   .services h3 {
-    font-family: "Quicksand", Arial, sans-serif;
+    font-family: "Baloo 2", Arial, sans-serif;
     font-size: 16px;
     font-weight: 500; }
   .services.color-2 {
@@ -785,7 +785,7 @@ body.offcanvas {
 
 .progress-wrap h3 {
   font-size: 16px;
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   margin-bottom: 10px; }
 
 .progress {
@@ -946,7 +946,7 @@ body.offcanvas {
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-family: "Quicksand", Arial, sans-serif; }
+    font-family: "Baloo 2", Arial, sans-serif; }
     .blog-entry .desc h3 a {
       color: #000;
       text-decoration: none; }
@@ -1029,7 +1029,7 @@ body.offcanvas {
           font-size: 16px;
           color: #333333; }
     .project .desc h1 {
-      font-family: "Quicksand", Arial, sans-serif;
+      font-family: "Baloo 2", Arial, sans-serif;
       font-size: 35px;
       font-weight: 500;
       letter-spacing: 1px;
@@ -1125,7 +1125,7 @@ body.offcanvas {
     font-size: 40px;
     display: block;
     color: white;
-    font-family: "Quicksand", Arial, sans-serif;
+    font-family: "Baloo 2", Arial, sans-serif;
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
@@ -1218,7 +1218,7 @@ body.offcanvas {
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family: "Baloo 2", Arial, sans-serif;
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
