add franklin n parkking

--- a/work/css/parkking.css
+++ b/work/css/parkking.css
@@ -132,7 +132,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.light{
-    background: url('../img/franklin.jpg') no-repeat;   
+    background: url('../img/parkking.jpg') no-repeat;   
      
     background-size: cover;
     -webkit-background-size: cover;
