--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -38,14 +38,12 @@
 }
 
 
-@media screen and (min-width:651px){
 
 /*  General CSS*/
 body{
     background: #fff;
-    max-width: 1440px;
+    
     width: 100%;
-    margin: 0;
 }
 
 .wrapper{
@@ -225,7 +223,6 @@ header{
 
 header .logo{
     float: left;
-    
     width:12%;
     
 }
@@ -272,19 +269,8 @@ header.dark nav ul li a:hover{
 }
 
 
-.bg {
 
-    display: block;
-    width: 100%;
-  
-    
-
-    
-}
-
-
-
-.bg h2 {
+.main-content h2{
 
     color: #616161;
     font-family: "raleway-bold";
@@ -292,11 +278,13 @@ header.dark nav ul li a:hover{
     font-weight: bold;
     padding-top: 3%;
     text-align: center;
+
    
 }
 
-.subtitle p {
+ p
 
+ {
     color: #838181;
     font-family: "raleway-regular";
     font-size: 16px;
@@ -304,413 +292,34 @@ header.dark nav ul li a:hover{
     letter-spacing: .5px;
     width: 60%;
     margin-left: 20%;
+   
 
 }
 
+.role {
 
-.bg ul li{
-    list-style: none;
-    display: block;
-    width: 21%;
-    float: left;
-    margin-right:2%;
-    text-align: center;
-}
-
-.bg ul li:first-child{
-    margin-left: 15%;
-}
-
-
-.bg ul li h2{
     color: #616161;
     font-family: "raleway-bold";
-    font-size: 22px;
-    font-weight: bold;
+    font-size: 20px;
     margin-top: 3%;
-
 }
 
-.bg ul li p{
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 16px;
-    line-height: 28px; 
-    margin-top: 10%;
-    letter-spacing: .5px;
-
-}
-
-.bg a {
-
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 35px;
-    font-weight: bold;
-    text-decoration: underline;
-    
-  
-}
-
-.bg a p {
-
-     text-align: center;
-}
-
-.bg hr {
-
-
-    width: 60%;
-    margin-left: 20%;
-    margin-top: 5%;
-
-}
-
-
-
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width:650px){
-
-body{
-    background: #fff;
-    margin: 0;
-}
-
-.wrapper{
-    width: 375px;
-    margin: 0 auto;
-}
-
-h1, h2, h3, h4, h5 ,h6{
-    color: #626262;
-    font-family: "raleway-regular", arial;
-    letter-spacing: 1px;
-}
-
-h1              { font-size: 2em;}
-h2              { font-size: 1.5em; margin: .75em 0 }
-h3              { font-size: 1.17em; margin: .83em 0 }
-h5              { font-size: .83em; margin: 1.5em 0 }
-h6              { font-size: .75em; margin: 1.67em 0 }
-h1, h2, h3, h4,
-h5, h6          { font-weight: bolder }
-
-.clearfix:before,  
-.clearfix:after {  
-    content: " ";  
-    display: table;  
-}  
-.clearfix:after {  
-    clear: both;  
-}  
  
-.clearfix {  
-    *zoom: 1;  
-}
 
-
-
-
-.focus-in-contract-bck {
-    -webkit-animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.6s both;
-            animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.6s both;
-}
-
-@-webkit-keyframes focus-in-contract-bck {
-  0% {
-    letter-spacing: 1em;
-    -webkit-transform: translateZ(300px);
-            transform: translateZ(300px);
-    -webkit-filter: blur(12px);
-            filter: blur(12px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateZ(12px);
-            transform: translateZ(12px);
-    -webkit-filter: blur(0);
-            filter: blur(0);
-    opacity: 1;
-  }
-}
-@keyframes focus-in-contract-bck {
-  0% {
-    letter-spacing: 1em;
-    -webkit-transform: translateZ(300px);
-            transform: translateZ(300px);
-    -webkit-filter: blur(12px);
-            filter: blur(12px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateZ(12px);
-            transform: translateZ(12px);
-    -webkit-filter: blur(0);
-            filter: blur(0);
-    opacity: 1;
-  }
-}
-
-
-
-
-/*    Billboard    */
-.billboard{
-    width: 100%;
-    height: 300px;
-    position: relative;
-}
-
-.billboard.light{
-    background: url('../img/blushup.jpg') no-repeat;   
-     
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-}
-
-.billboard.dark{
-    background: url('../img/') no-repeat;
-    
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-}
-
-
-
-.billboard .caption{
-    margin-top: -40px;
-    text-align: center;
-}
-
-.billboard .caption.light{
-    color: #fff;
-}
-
-.billboard .caption.dark{
-    color: #5d5d5d;
-}
-
-.billboard .caption h1{
+.title {
+      color: #838181;
     font-family: "raleway-bold";
-    font-weight: bold; 
-    margin-bottom: 30px;
-
-}
-
-.billboard .caption.light h1{
-    color: #fff;
-}
-
-.billboard .caption.dark h1{
-    color: #5d5d5d;
-}
-
-.billboard .caption p{
-    font-family: "raleway-regular";
-    font-size: 18px;
-    margin-bottom: 30px;
-}
-
-.billboard .caption.light p{
-    color: #fff;
-}
-
-.billboard .caption.dark p{
-    color: #5d5d5d;
-}
-
-.billboard .caption hr{
-    display: inline-block;
-    height: 1px;
-    width: 30px;
-    border: 0!important;   
-    margin: 0;
-    padding: 0;
-}
-
-.billboard .caption.light hr{
-    background: #fff;
-}
-
-.billboard .caption.dark hr{
-    background: #5d5d5d;
-}
-
-
-
-
-
-
-/*    header    */
-header{
-    width: 100%;
-    height: 125px;
-}
-
-header .logo{
-
-    float:left;
-    margin-left: -15px;
-    width: 25%;
-    margin-bottom: 5%;
-}
-
-
-header nav{
-    float: right;
-    margin-top: 57px;
-}
-
-
-header nav ul li{
-    list-style: none;
-    display: block;
-    float: left;
-    margin-left: 50px;
-}
-
-header nav ul li a{
-    text-decoration: none;  
-    font-family: "raleway-regular";
-    font-size: 14px;
-
-    transition:all .2s linear;
-    -webkit-transition:all .2s linear;
-    -moz-transition:all .2s linear;
-    -o-transition:all .2s linear;
-}
-
-header.light nav ul li a{  
-    color: #fff;
-}
-
-header.light nav ul li a:hover{
-    color: #B9B9B9;
-}
-
-header.dark nav ul li a{  
-    color: #5d5d5d;
-}
-
-header.dark nav ul li a:hover{
-    color: #919191;
-}
-
-
-.bg {
-
-    display: block;
-    width: 100%;
-        
-
-    
-}
-
-
-
-.bg h2 {
-
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 30px;
-    font-weight: bold;
-    padding-top: 3%;
-    text-align: center;
-   
-}
-
-.subtitle p {
-
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 16px;
+    font-size: 24px;
     line-height: 28px; 
     letter-spacing: .5px;
-    width: 80%;
-    text-align: center;
-    margin-left: 10%;
-
-}
-
-
-.bg ul li{
-    list-style: none;
-    display: block;
-    width: 21%;
-    float: left;
-    margin-right:10%;
-    text-align: center;
-}
-
-.bg ul li:first-child{
-    margin-left: 5%;
-}
-
-
-.bg ul li h2{
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 22px;
-    font-weight: bold;
-    margin-top: 3%;
-
-}
-
-.bg ul li p{
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 14px;
-    line-height: 28px; 
-    margin-top: 10%;
-    letter-spacing: .5px;
-
-}
-
-.bg a {
-
-    color: #616161;
-    font-family: "raleway-regular";
-    font-size: 28px;
-    font-weight: bold;
-    text-decoration: underline;
-    
-  
-}
-
-.bg a p {
-
-     text-align: center;
-}
-
-.bg hr {
-
-
     width: 60%;
     margin-left: 20%;
-    margin-top: 5%;
+   
 
 }
 
 
-}
+
 
 
 .footer p {
@@ -719,7 +328,7 @@ header.dark nav ul li a:hover{
     font-size: 30px;
     line-height: 28px; 
     letter-spacing: .5px;
- 
+    width: 60%;
    
     font-family: "Quicksand", Arial, sans-serif;
    
@@ -779,3 +388,38 @@ header.dark nav ul li a:hover{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:650px){
+
+
+header .logo{
+
+    float:left;
+    margin-left: -15px;
+    width: 25%;
+    margin-bottom: 5%;
+}
+
+.billboard .caption h1{
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold; 
+    margin-bottom: 30px;
+}
+
+
+
+}
