--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,8 @@ body.offcanvas {
     text-transform: uppercase;
     letter-spacing: 2px;
     border: 1.5px solid #000;
-    padding: 2px 10px; }
+    padding: 2px 10px; 
+    }
 
 .fancy-collapse-panel .panel-default > .panel-heading {
   padding: 0; }
