--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -41,7 +41,7 @@
 
 /*  General CSS*/
 body{
-    background: #fff;
+    background: #f9f9f9;
     
     width: 100%;
 }
@@ -126,8 +126,9 @@ h5, h6          { font-weight: bolder }
 
 /*    Billboard    */
 .billboard{
-    width: 100%;
-    height: 650px;
+    width: 80%;
+    margin-left: 10%;
+    height: 400px;
     position: relative;
 }
 
@@ -152,7 +153,7 @@ h5, h6          { font-weight: bolder }
 
 
 .billboard .caption{
-    margin-top: 130px;
+    
     text-align: center;
 }
 
@@ -167,7 +168,7 @@ h5, h6          { font-weight: bolder }
 .billboard .caption h1{
     font-family: "raleway-bold";
     font-size: 50px;
-    font-weight: bold; 
+    font-weight: medium; 
     margin-bottom: 30px;
 }
 
