--- a/work/css/franklin.css
+++ b/work/css/franklin.css
@@ -41,7 +41,7 @@
 
 /*  General CSS*/
 body{
-    background: #fff;
+    background: #f9f9f9;
     
     width: 100%;
 }
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5 ,h6{
     letter-spacing: 1px;
 }
 
-h1              { font-size: 2em; margin: .67em 0 }
+h1              { font-size: 2em; margin: 1.2em 0 }
 h2              { font-size: 1.5em; margin: .75em 0 }
 h3              { font-size: 1.17em; margin: .83em 0 }
 h5              { font-size: .83em; margin: 1.5em 0 }
@@ -126,13 +126,14 @@ h5, h6          { font-weight: bolder }
 
 /*    Billboard    */
 .billboard{
-    width: 100%;
-    height: 650px;
+    width: 80%;
+    margin-left: 10%;
+    height: 400px;
     position: relative;
 }
 
 .billboard.light{
-    background: url('../img/franklin.jpg') no-repeat;   
+    background: url('../img/') no-repeat;   
      
     background-size: cover;
     -webkit-background-size: cover;
@@ -141,7 +142,7 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard.dark{
-    background: url('../img/') no-repeat;
+    background: url('../img/franklin.jpg') no-repeat;
     
     background-size: cover;
     -webkit-background-size: cover;
@@ -152,7 +153,7 @@ h5, h6          { font-weight: bolder }
 
 
 .billboard .caption{
-    margin-top: 130px;
+
     text-align: center;
 }
 
@@ -167,7 +168,7 @@ h5, h6          { font-weight: bolder }
 .billboard .caption h1{
     font-family: "raleway-bold";
     font-size: 50px;
-    font-weight: bold; 
+    font-weight: medium; 
     margin-bottom: 30px;
 }
 
