--- a/work/css/parkking.css
+++ b/work/css/parkking.css
@@ -1,48 +1,14 @@
 
 
 /*  Fonts  */
-@font-face {
-    font-family: 'raleway-regular';
-    src: url('../fonts/raleway-regular.eot');
-    src: url('../fonts/raleway-regular.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-regular.woff') format('woff'),
-         url('../fonts/raleway-regular.ttf') format('truetype'),
-         url('../fonts/raleway-regular.svg#raleway-regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
-}
-
-@font-face {
-    font-family: 'raleway-semibold';
-    src: url('../fonts/raleway-semibold.eot');
-    src: url('../fonts/raleway-semibold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-semibold.woff') format('woff'),
-         url('../fonts/raleway-semibold.ttf') format('truetype'),
-         url('../fonts/raleway-semibold.svg#raleway-semibold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'raleway-bold';
-    src: url('../fonts/raleway-bold.eot');
-    src: url('../fonts/raleway-bold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-bold.woff') format('woff'),
-         url('../fonts/raleway-bold.ttf') format('truetype'),
-         url('../fonts/raleway-bold.svg#raleway-bold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
 
 
 
 /*  General CSS*/
 body{
     background: #f9f9f9;
-    
     width: 100%;
 }
 
@@ -52,8 +18,8 @@ body{
 }
 
 h1, h2, h3, h4, h5 ,h6{
-    color: #626262;
-    font-family: "raleway-regular", arial;
+    
+    font-family: 'Lato', sans-serif;
     letter-spacing: 1px;
 }
 
@@ -166,9 +132,9 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard .caption h1{
-    font-family: "raleway-bold";
+    font-family: 'Lato', sans-serif;
     font-size: 50px;
-    font-weight: medium; 
+    font-weight: 700; 
     margin-bottom: 30px;
 }
 
@@ -235,48 +201,14 @@ header nav{
 }
 
 
-header nav ul li{
-    list-style: none;
-    display: block;
-    float: left;
-    margin-left: 50px;
-}
-
-header nav ul li a{
-    text-decoration: none;  
-    font-family: "raleway-regular";
-    font-size: 14px;
-
-    transition:all .2s linear;
-    -webkit-transition:all .2s linear;
-    -moz-transition:all .2s linear;
-    -o-transition:all .2s linear;
-}
-
-header.light nav ul li a{  
-    color: #fff;
-}
-
-header.light nav ul li a:hover{
-    color: #B9B9B9;
-}
-
-header.dark nav ul li a{  
-    color: #5d5d5d;
-}
-
-header.dark nav ul li a:hover{
-    color: #919191;
-}
-
 
 
 .main-content h2{
 
-    color: #616161;
-    font-family: "raleway-bold";
+
+    font-family: 'Lato', sans-serif;
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 700;
     padding-top: 3%;
     width: 60%;
     margin-left: 20%;
@@ -288,9 +220,10 @@ header.dark nav ul li a:hover{
  p
 
  {
-    color: #838181;
-    font-family: "raleway-regular";
-    font-size: 16px;
+
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 17px;
     line-height: 28px; 
     letter-spacing: .5px;
     width: 60%;
@@ -301,25 +234,16 @@ header.dark nav ul li a:hover{
 
 .role {
 
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 20px;
+
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 17px;
     margin-top: 3%;
 }
 
  
 
-.title {
-      color: #838181;
-    font-family: "raleway-bold";
-    font-size: 16px;
-    line-height: 28px; 
-    letter-spacing: .5px;
-    width: 60%;
-    margin-left: 20%;
-   
 
-}
 
 .problem-img {
     width: 150px;
@@ -328,13 +252,13 @@ header.dark nav ul li a:hover{
 }
 
 strong {
-    font-family: "raleway-bold";
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
 }
 
 
 .footer p {
 
-    color: #000000;
     font-size: 30px;
     line-height: 28px; 
     letter-spacing: .5px;
@@ -416,9 +340,9 @@ header .logo{
 }
 
 .billboard .caption h1{
-    font-family: "raleway-bold";
+    font-family: 'Lato', sans-serif;
     font-size: 30px;
-    font-weight: bold; 
+    font-weight: 700; 
     margin-bottom: 30px;
 }
 
