--- a/work/css/parkking.css
+++ b/work/css/parkking.css
@@ -147,10 +147,12 @@ h5, h6          { font-weight: bolder }
 }
 
 .billboard .caption p{
-    font-family: "raleway-regular";
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
     font-size: 18px;
     margin-bottom: 30px;
 }
+
 
 .billboard .caption.light p{
     color: #fff;
