--- a/work/css/qeesi.css
+++ b/work/css/qeesi.css
@@ -146,9 +146,11 @@ h5, h6          { font-weight: bolder }
 
 .billboard .caption p{
     font-family: 'Lato', sans-serif;
+    font-weight: 700;
     font-size: 18px;
     margin-bottom: 30px;
 }
+
 
 .billboard .caption.light p{
     color: #fff;
