--- a/work/css/rackspace.css
+++ b/work/css/rackspace.css
@@ -191,8 +191,11 @@ header{
 }
 
 header .logo{
+
     float: left;
-    width:12%;
+    width:60px;
+    margin-top: 10px;
+    margin-left: 10px;
     
 }
 
@@ -330,9 +333,7 @@ header .logo{
 header .logo{
 
     float:left;
-    margin-left: -15px;
-    width: 25%;
-    margin-bottom: 5%;
+    width: 50px;
 }
 
 .billboard .caption h1{
