--- a/work/css/sap.css
+++ b/work/css/sap.css
@@ -189,8 +189,11 @@ header{
 }
 
 header .logo{
+
     float: left;
-    width:12%;
+    width:60px;
+    margin-top: 10px;
+    margin-left: 10px;
     
 }
 
@@ -353,9 +356,7 @@ font-weight: 700;
 header .logo{
 
     float:left;
-    margin-left: -15px;
-    width: 25%;
-    margin-bottom: 5%;
+    width: 50px;
 }
 
 .billboard .caption h1{
