--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -191,7 +191,9 @@ header{
 
 header .logo{
     float: left;
-    width:12%;
+    width:60px;
+    margin-top: 10px;
+    margin-left: 10px;
     
 }
 
@@ -338,9 +340,8 @@ header .logo{
 header .logo{
 
     float:left;
-    margin-left: -15px;
-    width: 25%;
-    margin-bottom: 5%;
+    width: 50px;
+    
 }
 
 .billboard .caption h1{
