--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
 .aboutme p {
 
   font-family: 'Lato', sans-serif;
+  font-size: 23px;
   font-weight: 400;
   line-height: 1.8;
   color: rgba(0, 0, 0, 0.7);
